[TASK] Swap navbar and fixed collapse button color

--- a/public/sass/navigation.scss
+++ b/public/sass/navigation.scss
@@ -23,4 +23,12 @@
       }
     }
   }
+  .navbar-header{
+    .navbar-toggle{
+      background-color: $light-orange;
+      .icon-bar{
+        background-color: $dark-gray;
+      }
+    }
+  }
 }
